--- a/style.css
+++ b/style.css
@@ -10,11 +10,18 @@ h1 {
 	font-size: 4em;
 }
 article p {
-	background-image: url(http://www.placecage.com/g/100/100);
+	;
 	padding: 20px;
-	color: white;
+	color: black;
 	font-size: 30px;
 }
 body {
 	color: #FFE5AA
+}
+ aside section{
+	background-image: url(http://www.placecage.com/g/100/100)
+}
+h4 {
+	color: white;
+	font-size: 15px;
 }
